--- a/services/acupuncture.html
+++ b/services/acupuncture.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +12,14 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>Acupuncture</title>
 </head>
-
 <body>
     <nav class="navbar fixed-top sticky-top navbar-expand-lg navbar-dark green z-depth-1">
         <a class="navbar-brand white z-depth-2" href="#">
-            <!--<img src="img/logo.png" alt="">-->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto navlink">
                 <li class="nav-item">
@@ -32,14 +28,20 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="chiropractic.html">Chiropractic</a>
-                        <a class="dropdown-item" href="physiotherapy.html">Physiotherapy</a>
-                        <a class="dropdown-item" href="acupuncture.html">Acupuncture</a>
-                        <a class="dropdown-item" href="naturopathic.html">Naturopathic</a>
-                    </div>
+                <li class="nav-item">
+                        <a class="nav-link" href="massagetherapy.html">Massage Therpay</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="chiropractic.html">Chiropractic</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="physiotherapy.html">Physiotherapy</a>
+                </li>
+                <li class="nav-item active">
+                        <a class="nav-link" href="#">Acupuncture</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="naturopathic.html">Naturopathic</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../aboutus/">About Us</a>
@@ -67,53 +69,65 @@
             </ul>
         </div>
     </nav>
-    <header class="header">
+    <header class="header header-service-acupuncture">
         <div class="header__head">
-            <img src="../img/logo.png" alt="logo" class="header__head">
+            <hi class="h1-responsive white-text text-center">Acupuncture</hi>
         </div>
+        <img src="../img/wavewhite.png" alt="main-photo" class="main-photo img-fluid">
     </header>
-    <main class="container">
-    <section class="chiropractic">
-        <div class="text-center green-text">
-            <img src="../img/1.png" alt="service" class="service-img">
-            <h3>Acupuncture</h3>
-        </div>
-        <p class="lead text-justify">In this modern era, the health world covers many biological & natural treatments to aid diseases & overcome chronic
-            pain. For better health comfort & active lifestyle people invest into Gym, heavy medicines, operations & other
-            holistic health practices that can un-cover their health disorders.
-        </p>
+    <main class="container mt-5">
+        <section class="chiropractic">
+            <div class="text-center green-text">
+                <img src="../img/1.png" alt="service" class="service-img">
+                <h3>Acupuncture</h3>
+            </div>
+            <p class="lead text-justify">In this modern era, the health world covers many biological & natural treatments to aid diseases & overcome chronic
+                pain. For better health comfort & active lifestyle people invest into Gym, heavy medicines, operations &
+                other holistic health practices that can un-cover their health disorders.
+            </p>
         </section>
-        <section class="chiropractic-more">
-        <div class="row">
-            <div class="col-lg-5 col-xl-5 pb-3">
-                <div class="view overlay text-center">
-                    <img src="../img/question.png" alt="question" class="img-fluid question">
-                    <a>
-                        <div class="mask rgba-white-slight"></div>
-                    </a>
+        <section class="chiropractic-more my-5">
+            <div class="row">
+                <div class="col-lg-5 col-xl-5 pb-3">
+                    <div class="view overlay z-depth-2">
+                        <img src="../img/section/acupuncture-tools.jpeg" alt="question" class="img-fluid img-roiund">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-xl-7">
+                    <h3 class="mb-4 font-weight-bold green-text h3-responsive">
+                        <strong>Wonders of Acupuncture therapy:
+                        </strong>
+                    </h3>
+                    <ul class="lead">
+                        <li>Healthy You- Lessen stress & sickness. </li>
+                        <li>Reduce the addiction of Painkillers.</li>
+                        <li>Reduce the addiction of Painkillers.</li>
+                        <li>Complement to real physical therapy to relax pain in case of injuries.</li>
+                        <li>Drug-free treatment with no side-effects.</li>
+                        <li>Suppress swelling & irritation caused by bacterial infection.</li>
+                        <li>Safe treatment for Diabetes, Asthma, Migraine attacks & dental pain.</li>
+                        <li>Frequent acupuncture visits helps decrease blood pressure, depression & joint pains.</li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-lg-7 col-xl-7">
-                <h3 class="mb-4 font-weight-bold green-text h3-responsive">
-                    <strong>Wonders of Acupuncture therapy:
-                    </strong>
-                </h3>
-                <ul>
-                    <li>Healthy You- Lessen stress & sickness. </li>
-                    <li>Reduce the addiction of Painkillers.</li>
-                    <li>Reduce the addiction of Painkillers.</li>
-                    <li>Complement to real physical therapy to relax pain in case of injuries.</li>
-                    <li>Drug-free treatment with no side-effects.</li>
-                    <li>Suppress swelling & irritation caused by bacterial infection.</li>
-                    <li>Safe treatment for Diabetes, Asthma, Migraine attacks & dental pain.</li>
-                    <li>Frequent acupuncture visits helps decrease blood pressure, depression & joint pains.</li>
-                </ul>
+        </section>
+    </main>
+    <img src="../img/wavegreen.png" alt="wave" class="wave">
+    <section class="green py-5 text-white">
+        <div class="container">
+            <h3 class="h3-responsive text-center">
+                Naturopathic </h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, veritatis rem alias doloremque recusandae,
+                maiores molestias debitis eius quisquam saepe, blanditiis est dignissimos dolores? Veniam ipsum itaque ipsa
+                nesciunt odio.</p>
+            <div class="text-center py-2">
+                <a class="btn white green-text btn-white mb-4 btn-round" href="contactus/index.html">Contact Us</a>
             </div>
         </div>
     </section>
-    </main>
-
-    <!-- The Footer Sectiion will start below -->
     <footer class="page-footer font-small">
         <div class="container-fluid text-center">
             <img src="../img/logo.png" alt="Logo">
@@ -141,8 +155,6 @@
             © 2018 Copyright: Aurora Massage Centre
         </div>
     </footer>
-    <!--End of Footer-->
-    <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -152,5 +164,4 @@
     <script type="text/javascript" src="../js/mdb.min.js"></script>
     <script src="../js/scripts.js"></script>
 </body>
-
 </html>
