--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!--Link to CSS-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
@@ -14,189 +12,173 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Aurora Massage & Chiropractic Wellness Centre</title>
 </head>
-
 <body>
-    <!--Start project here -->
-<nav class="navbar fixed-top sticky-top navbar-expand-lg navbar-dark  green z-depth-1">
-    <a class="navbar-brand white z-depth-2" href="#">
-        <!--<img src="img/logo.png" alt="">-->
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto navlink">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">
-                    <i class="fas fa-home"></i>
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="/services/chiropractic.html">Chiropractic</a>
-                    <a class="dropdown-item" href="/services/physiotherapy.html">Physiotherapy</a>
-                    <a class="dropdown-item" href="/services/acupuncture.html">Acupuncture</a>
-                    <a class="dropdown-item" href="/services/naturopathic.html">Naturopathic</a>
-                </div>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link " href="aboutus/">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="/contactus/">Contact Us</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto social">
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<header class="header">
-    <div class="header__head">
-        <img src="img/logo.png" alt="logo" class="header__head">
-    </div>
-    <img src="img/img.png" alt="main-photo" class="main-photo">
-</header>
-<main class="container">
-    <section class="title">
-        <h3 class="mb-4 font-weight-bold green-text text-center h3-responsive">
-            <strong>Aurora Massage & Chiropractic Wellness Centre
-            </strong>
-        </h3>
-        <p class="lead text-justify">Our multi-therapy centre offers a wide scope of Wellness Therapies. Our practitioners are highly trained in Chiropractic,
-            Massage Therapy, Acupuncture and Naturopathy. We are confident that you will find a therapist to help you with
-            your needs.
-        </p>
-    </section>
-    <section class="services text-center">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="service text-center green-text">
-                    <img src="img/4.png" alt="service" class="service-img">
-                    <h3>Physiotherapy</h3>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="service text-center green-text">
-                    <img src="img/2.png" alt="service" class="service-img">
-                    <h3>Chiropractic</h3>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="service text-center green-text">
-                    <img src="img/1.png" alt="service" class="service-img">
-                    <h3>Acupuncture</h3>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="service text-center green-text">
-                    <img src="img/3.png" alt="service" class="service-img">
-                    <h3>Naturopathic</h3>
-                </div>
-            </div>
+    <nav class="navbar fixed-top sticky-top navbar-expand-lg navbar-dark green z-depth-1">
+        <a class="navbar-brand white z-depth-2" href="#">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto navlink">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">
+                        <i class="fas fa-home"></i>
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services/massagetherapy.html">Massage Therapy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services/chiropractic.html">Chiropractic</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services/physiotherapy.html">Physiotherapy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services/acupuncture.html">Acupuncture</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/services/naturopathic.html">Naturopathic</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="aboutus/">About Us</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="/contactus/">Contact Us</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto social">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="#">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-        <a class="btn btn-green mt-5 text-center" href="#">Learn More</a>
-    </section>
-</main>
-
-
-    <h3 class="mb-4 font-weight-bold green-text text-center">
-            <strong>Crush your allergies, stop stress, relax your mind & add years to your LIFE.
-
-
-            </strong>
-        </h3>
-    <section class="info pd-5">
+    </nav>
+    <header class="header header-main">
+        <div class="header__head">
+            <h1 class="h1-responsive white-text text-center">Aurora Massage & Chiropractic Wellness Centre</h1>
+        </div>
+        <img src="img/wavewhite.png" alt="main-photo" class="wave wave-buttom main-photo">
+    </header>
+    <main class="container">
+        <section class="title my-5">
+            <h3 class="mb-4 font-weight-bold green-text text-center h3-responsive">
+                <strong>Aurora Massage & Chiropractic Wellness Centre
+                </strong>
+            </h3>
+            <p class="lead text-justify">Our multi-therapy centre offers a wide scope of Wellness Therapies. Our practitioners are highly trained in Chiropractic,
+                Massage Therapy, Acupuncture and Naturopathy. We are confident that you will find a therapist to help you
+                with your needs.
+            </p>
+        </section>
+        <section class="services text-center my-5 green-text">
+             <div class="row">
+                <div class="col-12 col-md-6 col-lg-2 offset-lg-1">
+                    <div class="service">
+                        <a class="services-more" href="/services/massagetherapy.html">
+                            <img src="img/4.png" alt="service" class="service-img">
+                            <h4>Massage</h4>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="service">
+                        <a class="services-more" href="/services/physiotherapy.html">
+                            <img src="img/5.png" alt="service" class="service-img">
+                            <h4>Physiotherapy</h4>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="service">
+                        <a class="services-more" href="/services/chiropractic.html">
+                            <img src="img/2.png" alt="service" class="service-img">
+                            <h4>Chiropractic</h4>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="service">
+                        <a class="services-more" href="/services/acupuncture.html">
+                            <img src="img/1.png" alt="service" class="service-img">
+                            <h4>Acupuncture</h4>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-2">
+                    <div class="service">
+                        <a class="services-more" href="/services/naturopathic.html">
+                            <img src="img/3.png" alt="service" class="service-img">
+                            <h4>Naturopathic</h4>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <section class="my-5 text-justify">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay rounded z-depth-2">
-                        <img src="img/feature/1.jpeg" alt="" class="img-fluid">
+                    <div class="view overlay z-depth-2">
+                        <img src="img/feature/1.jpeg" alt="Massage" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
-                    <img src="img/nat.png" alt="nat" class="nat">
-
+                    <img src="img/nat.png" alt="image of naturopathic" class="naturopathic-img">
                 </div>
                 <div class="col-lg-7 col-xl-7">
-                    <h3 class="mb-4 font-weight-bold green-text">
+                    <h3 class="mb-4 font-weight-bold green-text h3-responsive">
                         <strong>Which Therapy is perfect for my HEALTH?
                         </strong>
                     </h3>
-                    <p class="lead">There are ample therapy programs running in the market but at Aurora Massage & Chiropractic Wellness
+                    <p class="lead ">There are ample therapy programs running in the market but at Aurora Massage & Chiropractic Wellness
                         Centre we carefully examine our client’s illness cause & aim to ensure effective therapies & naturopathic
                         treatment followed by nutrition & motivation tips.</p>
+                    <a class="btn green btn-round" href="contactus/index.html">Contact Us</a>
                 </div>
             </div>
         </div>
-        </div>
     </section>
-
-    <section class="green more pt-5">
+    <img src="img/wavegreen.png" alt="wave" class="img-fluid wave wave-buttom">
+    <section class="green py-5 text-justify">
         <div class="container">
-
             <div class="row">
-
-                <!--Grid column-->
-
-                <!--Grid column-->
-
-                <!--Grid column-->
                 <div class="col-lg-7 col-xl-7">
-
-                    <h3 class="mb-4 font-weight-bold white-text">
-                        <strong>Let massage, botanical medicines & acupuncture aid in the healing of your common health issues.
-
-                        </strong>
+                    <h3 class="mb-4 font-weight-bold white-text h3-responsive">
+                        <strong>Let massage, botanical medicines & acupuncture aid in the healing of your common health issues.</strong>
                     </h3>
-
                     <p class="lead white-text">Every individual aspire for ideal health & physical wellbeing. We have to invest healthy practices as
                         there’s no secret or magic to fight health challenges & attain a fit lifestyle.</p>
-
-
+                    <a class="btn white green-text btn-white mb-4 btn-round" href="contactus/index.html">Contact Us</a>
                 </div>
-                <div class="col-lg-5 col-xl-5
-                ">
-                    <!--Featured image-->
-                    <div class="view overlay rounded z-depth-2">
-                        <img src="img/feature/1.jpeg" alt="" class="img-fluid">
+                <div class="col-lg-5 col-xl-5">
+                    <div class="view overlay z-depth-2">
+                        <img src="img/section/massage.jpeg" alt="" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
                         </a>
                     </div>
                 </div>
-                <!--Grid column-->
-
             </div>
-            <!--Grid row-->
-
         </div>
     </section>
-
-    </section>
-
-    </main>
-    <!-- The Footer Sectiion will start below -->
     <footer class="page-footer font-small">
         <div class="container-fluid text-center">
             <img src="img/logo.png" alt="Logo">
@@ -224,9 +206,7 @@
             © 2018 Copyright: Aurora Massage Centre
         </div>
     </footer>
-    <!--End of Footer-->
-    <!--Javascript-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
@@ -235,5 +215,4 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
