--- a/services/physiotherapy.html
+++ b/services/physiotherapy.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +8,18 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
         crossorigin="anonymous">
-        <link href="../css/mdb.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
+    <link href="../css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Physiotherapy</title>
 </head>
-
 <body>
     <nav class="navbar fixed-top sticky-top navbar-expand-lg navbar-dark  green z-depth-1">
         <a class="navbar-brand white z-depth-2" href="#">
-            <!--<img src="img/logo.png" alt="">-->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto navlink">
                 <li class="nav-item">
@@ -32,16 +28,21 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
-                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="chiropractic.html">Chiropractic</a>
-                        <a class="dropdown-item" href="#">Physiotherapy</a>
-                        <a class="dropdown-item" href="acupuncture.html">Acupuncture</a>
-                        <a class="dropdown-item" href="naturopathic.html">Naturopathic</a>
-                    </div>
-                </li>
-
+                <li class="nav-item">
+                        <a class="nav-link" href="massagetherapy.html">Massage Therpay</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="chiropractic.html">Chiropractic</a>
+                        </li>
+                        <li class="nav-item active">
+                                <a class="nav-link" href="#">Physiotherapy</a>
+                            </li>
+                            <li class="nav-item">
+                                    <a class="nav-link" href="acupuncture.html">Acupuncture</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link" href="naturopathic.html">Naturopathic</a>
+                                    </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../aboutus/">About Us</a>
                 </li>
@@ -68,16 +69,14 @@
             </ul>
         </div>
     </nav>
-    <header class="header">
+    <header class="header header-service-physiotherapy">
         <div class="header__head">
-            <img src="../img/logo.png" alt="logo" class="header__head">
+            <h1 class="h1-responsive white-text text-center">Physiotherapy</h1>
         </div>
+        <img src="../img/wavewhite.png" alt="main-photo" class="main-photo img-fluid wave-buttom">
     </header>
-
-    <main class="container">
-
-
-        <section class="physiotherapy">
+    <main class="container mt-5 ">
+        <section class="physiotherapy mb-5">
             <div class="text-center green-text">
                 <img src="../img/4.png" alt="service" class="service-img">
                 <h3>Physiotherapy</h3>
@@ -87,47 +86,23 @@
                 The physiotherapist’s goal is to provide individual treatment to restore maintain and maximize your overall
                 well-being. The assessment may consist of functional movement, balance, strength endurance testing.</p>
         </section>
-        <section class="physiotherapy-more"></section>
-            <div class="row">
-                <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay text-center">
-                        <img src="../img/question.png" alt="question" class="img-fluid question">
-                        <a>
-                            <div class="mask rgba-white-slight"></div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-xl-7">
-                    <h3 class="mb-4 font-weight-bold green-text h3-responsive">
-                        <strong>What is a chiropractic adjustment? Is it safe?
-                        </strong>
-                    </h3>
-                    <p class="lead">An adjustment is the main method of treatment used by your chiropractor. It is a specialized gentle,
-                        controlled and safe pressure applied to your spine to restore the proper motion and position of your
-                        vertebrae. It is a precise procedure that your highly skilled chiropractor has learned through education
-                        and perfected over years in clinical practice.</p>
-                </div>
-            </div>
-
-        </section>
     </main>
-    <section class="green more pt-5">
+    <section class=" more pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-xl-7">
-                    <h3 class="mb-4 font-weight-bold white-text">
+                    <h3 class="mb-4 font-weight-bold green-text h3-responsive">
                         <strong>Benefits of Physiotherapy</strong>
                     </h3>
-                    <p class="lead white-text">Provide and include decreasing pain, improving joint mobility increasing strength and coordination and
+                    <p class="lead">Provide and include decreasing pain, improving joint mobility increasing strength and coordination and
                         improve cardiovascular function. Physiotherapy aims to restore proper function to the body, and education
                         for injury prevention is always key.</p>
-
-                    <p class="lead white-text">Everyone can benefit from physiotherapy whether you are living with a chronic illness, recovering from
+                    <p class="lead">Everyone can benefit from physiotherapy whether you are living with a chronic illness, recovering from
                         a work injury or suffering after playing that weekend sports game.</p>
                 </div>
                 <div class="col-lg-5 col-xl-5">
                     <!--Featured image-->
-                    <div class="view overlay rounded z-depth-2">
+                    <div class="view overlay img-round z-depth-2">
                         <img src="../img/feature/1.jpeg" alt="" class="img-fluid">
                         <a>
                             <div class="mask rgba-white-slight"></div>
@@ -137,9 +112,50 @@
             </div>
         </div>
     </section>
-       <!-- The Footer Sectiion will start below 
-************************************* -->
-<footer class="page-footer font-small">
+    <section class="chiropractic-more my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xl-5 pb-3">
+                    <div class="view overlay z-depth-2">
+                        <img src="../img/section/acupuncture-tools.jpeg" alt="question" class="img-fluid img-roiund">
+                        <a>
+                            <div class="mask rgba-white-slight"></div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-7 col-xl-7">
+                    <h3 class="mb-4 font-weight-bold green-text h3-responsive">
+                        <strong>Common Conditions treated by Physiotherapist include (but not limited to):
+                        </strong>
+                    </h3>
+                    <ul class="lead">
+                        <li>Headaches/migraines</li>
+                        <li>Neck pain/whiplash</li>
+                        <li>Low back pain/sciatica</li>
+                        <li>Spinal disc conditions (arthritis disc bulge/herniation)</li>
+                        <li>Shoulder pain/Rotator Cuff strain.</li>
+                        <li>Repetitive strain injuries</li>
+                        <li>Motor vehicle accident MVA injuries</li>
+                        <li>Sport-specific injuries (ligamentous upper and lower extremities)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <img src="../img/wavegreen.png" alt="wave" class="wave">
+    <section class="green py-5 text-white">
+        <div class="container">
+            <h3 class="h3-responsive text-center">
+                Physiotherapy </h3>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, veritatis rem alias doloremque recusandae,
+                maiores molestias debitis eius quisquam saepe, blanditiis est dignissimos dolores? Veniam ipsum itaque ipsa
+                nesciunt odio.</p>
+            <div class="text-center py-2">
+                <a class="btn white green-text btn-white mb-4 btn-round" href="contactus/index.html">Contact Us</a>
+            </div>
+        </div>
+    </section>
+    <footer class="page-footer font-small">
         <div class="container-fluid text-center">
             <img src="../img/logo.png" alt="Logo">
             <p class="green-text">Stay Social</p>
@@ -166,8 +182,6 @@
             © 2018 Copyright: Aurora Massage Centre
         </div>
     </footer>
-    <!--End of Footer-->
-    <!--Javascript-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -177,5 +191,4 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
