--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </ul>
         </div>
     </nav>
-    <header class="header header-main">
+    <header class="header header-main header-1">
         <div class="header__head">
             <h1 class="h1-responsive white-text text-center">Aurora Massage & Chiropractic Wellness Centre</h1>
         </div>
