--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay z-depth-2">
+                    <div class="view overlay z-depth-2 img-round">
                         <img src="img/feature/1.jpeg" alt="Massage" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
@@ -169,7 +169,7 @@
                     <a class="btn white green-text btn-white mb-4 btn-round" href="contactus/index.html">Contact Us</a>
                 </div>
                 <div class="col-lg-5 col-xl-5">
-                    <div class="view overlay z-depth-2">
+                    <div class="view overlay z-depth-2 img-round">
                         <img src="img/section/massage.jpeg" alt="" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
