--- a/services/acupuncture.html
+++ b/services/acupuncture.html
@@ -89,7 +89,7 @@
         <section class="chiropractic-more my-5">
             <div class="row">
                 <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay z-depth-2">
+                    <div class="view overlay z-depth-2 img-round">
                         <img src="../img/section/acupuncture-tools.jpeg" alt="question" class="img-fluid img-roiund">
                         <a>
                             <div class="mask rgba-white-slight"></div>
