--- a/services/chiropractic.html
+++ b/services/chiropractic.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-lg-5 col-xl-5">
                     <!--Featured image-->
-                    <div class="view overlay rounded z-depth-2">
+                    <div class="view overlay  z-depth-2 img-round">
                         <img src="../img/feature/1.jpeg" alt="" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
