--- a/services/massagetherapy.html
+++ b/services/massagetherapy.html
@@ -89,7 +89,7 @@
         <section class="what-massage pd-5">
             <div class="row">
                 <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay z-depth-2">
+                    <div class="view overlay z-depth-2 img-round">
                         <img src="../img/section/massage--highlight.jpeg" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
@@ -133,7 +133,7 @@
                             </ul>
                         </div>
                 <div class="col-lg-5 col-xl-5">
-                    <div class="view overlay text-center">
+                    <div class="view overlay  z-depth-2 img-round">
                         <img src="../img/section/stress.jpeg" alt="stress" class="img-fluid img-round">
                         <a>
                             <div class="mask rgba-white-slight"></div>
@@ -149,7 +149,7 @@
             <p class="lead text-justify pb-5">Concise pressure followed by massage is applied to specific reflexes of the feet (or hand), which stimulates circulation & rest body thereby making patient's feel great & relaxed.</p>
             <div class="row">
                     <div class="col-lg-5 col-xl-5 py-5">
-                        <div class="view overlay z-depth-2">
+                        <div class="view overlay z-depth-2 img-round">
                             <img src="../img/section/reflexology.jpeg" class="img-fluid img-round">
                             <a>
                                 <div class="mask rgba-white-slight"></div>
