--- a/services/naturopathic.html
+++ b/services/naturopathic.html
@@ -40,7 +40,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="acupuncture.html">Acupuncture</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Naturopathic</a>
                 </li>
                 <li class="nav-item">
