--- a/services/physiotherapy.html
+++ b/services/physiotherapy.html
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-xl-5 pb-3">
-                    <div class="view overlay z-depth-2">
+                    <div class="view overlay z-depth-2 img-round">
                         <img src="../img/section/acupuncture-tools.jpeg" alt="question" class="img-fluid img-roiund">
                         <a>
                             <div class="mask rgba-white-slight"></div>
