--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <a class="nav-link" href="/services/naturopathic.html">Naturopathic</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="aboutus/">About Us</a>
+                    <a class="nav-link " href="/aboutus/">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="/contactus/">Contact Us</a>
+                    <a class="nav-link " href="contactus/">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto social">
