--- a/contactus/index.html
+++ b/contactus/index.html
@@ -8,6 +8,8 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <link href="../css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <title>Contact Us</title>
@@ -72,7 +74,8 @@
     <header class="header header-main">
         <div class="header__head">
             <h1 class="h1-responsive white-text text-center">Contact Us</h1>
-        </div>
+        </div>                 
+
         <img src="../img/wavewhite.png" alt="main-photo" class="main-photo img-fluid">
     </header>
     <main class="container my-5">
