--- a/services/massagetherapy.html
+++ b/services/massagetherapy.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
         crossorigin="anonymous">
     <link href="../css/mdb.min.css" rel="stylesheet">
@@ -71,7 +73,7 @@
     </nav>
     <header class="header header-service-massage">
         <div class="header__head">
-            <h1 class="h1-responsie text-white text-center display-1">Massage Therapy</h1>
+            <h1 class="h1-responsive text-white text-center display-1">Massage Therapy</h1>
         </div>
         <img src="../img/wavewhite.png" alt="main-photo" class="main-photo img-fluid wave-buttom">
     </header>
